tests/error/modifier_errors/flag_dagger_assign1.py
from guppylang import guppy


@guppy(dagger=True)
def test() -> None:
    x = 3


test.compile()
